# phoenix

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PhoenixConfig.cmake.in  README.md
CocoaPhoenix/: .gitignore  README.md
CocoaPhoenix/CocoaPhoenix.xcodeproj/: project.pbxproj
CocoaPhoenix/CocoaPhoenix.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CocoaPhoenix/CocoaPhoenix.xcodeproj/project.xcworkspace/xcuserdata/bodie.xcuserdatad/: UserInterfaceState.xcuserstate
CocoaPhoenix/CocoaPhoenix.xcodeproj/xcshareddata/xcschemes/: CocoaPhoenix-iOS.xcscheme  CocoaPhoenix-macOS.xcscheme  CocoaPhoenixTestingApp-iOS.xcscheme  CocoaPhoenixTestingApp-macOS.xcscheme  PHXMetal-iOS.xcscheme  PHXMetal-macOS.xcscheme
CocoaPhoenix/CocoaPhoenixTestingApp_iOS/: AppDelegate.h  AppDelegate.m  GameViewController.hpp  GameViewController.mm  main.m
CocoaPhoenix/CocoaPhoenixTestingApp_iOS/Base.lproj/: Main.storyboard
CocoaPhoenix/CocoaPhoenixTestingApp_macOS/: AppDelegate.h  AppDelegate.m  GameViewController.hpp  GameViewController.mm  main.mm
CocoaPhoenix/CocoaPhoenixTestingApp_macOS/Base.lproj/: Main.storyboard
CocoaPhoenix/Phoenix-iOS/: Info.plist
CocoaPhoenix/Phoenix-iOSTests/: Phoenix_iOSTests.mm
CocoaPhoenix/Phoenix-macOSTests/: Phoenix_macOSTests.mm
CocoaPhoenix/doc/: README.md
CocoaPhoenix/include/: CocoaPhoenix.hpp  PHXApplePrelude.hpp  PHXCocoaClassDefs.hpp  PHXCocoaClassNames.hpp  PHXCocoaTemplates.hpp  PHXCoreIncludes.hpp  PHXCppWrappers.hpp
CocoaPhoenix/include/cocoa_phx/: PHXDrawer.hpp  PHXRenderer.hpp  PHXResourceManager.hpp  PHXResponder.hpp  PHXShaders.h  PHXViewController.hpp  PHXViewDelegate.hpp
CocoaPhoenix/include/renderer/: Renderer.hpp  Renderer_impl.hxx
CocoaPhoenix/src/: PHXDefaultFactory.mm  PHXDrawer.mm  PHXMetal.metal  PHXRenderer_iOS.mm  PHXRenderer_macOS.mm  PHXResourceManager.mm  PHXResponder.mm  PHXResponder_iOS.mm  PHXViewController.mm  PHXViewController_iOS.mm  PHXViewDelegate.mm
cmake/toolchains/: iOS.cmake
dep/: CMakeLists.txt
dep/res/: .clang-format  .gitignore  CMakeLists.txt  id.hpp  mapper.cxx  mapper.hpp  mappings.cxx  resource.cxx  resource.hpp
dep/res/res/: _gitignore_decl.cxx  _gitignore_real.cxx  frag_spv_decl.cxx  pushconstants_frag_spv_decl.cxx  pushconstants_frag_spv_real.cxx  pushconstants_vert_spv_decl.cxx  triangle_frag_spv_decl.cxx  triangle_frag_spv_real.cxx  triangle_vert_spv_decl.cxx  vert_spv_decl.cxx  vert_spv_real.cxx  vk_renderer_frag_decl.cxx  vk_renderer_frag_glsl_decl.cxx  vk_renderer_frag_real.cxx  vk_renderer_triangle_frag_glsl_decl.cxx  vk_renderer_triangle_vert_glsl_decl.cxx  vk_renderer_triangle_vert_glsl_real.cxx  vk_renderer_vert_decl.cxx  vk_renderer_vert_glsl_decl.cxx  vk_renderer_vert_glsl_real.cxx  vk_renderer_vert_real.cxx  vk_renderer_world2d_frag_glsl_decl.cxx  vk_renderer_world2d_frag_glsl_real.cxx  vk_renderer_world2d_vert_glsl_decl.cxx  world2d_frag_spv_decl.cxx  world2d_vert_spv_decl.cxx  world2d_vert_spv_real.cxx
doc/: .gitignore  developer.md
include/: CMakeLists.txt  README.md  errors.hpp  event.hpp  graphics.hpp  init_error.hpp  input.hpp  lifetime.hpp  phoenix.hpp  prelude.hpp  queue.hpp  renderer.hpp  sdl_init_error.hpp
include/error/: init_error.hpp
include/graphics/: extent.hpp  graphics.hpp  renderer.hpp
include/impl/: graphics_impl.hxx  input_impl.hxx  phoenix_impl.hxx
include/phoenix/: phoenix.hpp  phoenix.hxx
include/phx_sdl/: README.md  display.hpp  gl_renderer.hpp  helper.hpp  init_util.hpp  init_video.hpp  scene.hpp  sdl_input.hpp  sdl_renderer.hpp  sdl_util.hpp  texture.hpp  vk_renderer.hpp  window.hpp
include/sdl/: README.md  display.hpp  gl_renderer.hpp  helper.hpp  init_util.hpp  init_video.hpp  renderer.hpp  sdl_renderer.hpp  sdl_util.hpp  texture.hpp  window.hpp
res/: .gitignore  CMakeLists.txt  vk_renderer.vert.glsl  vk_renderer_pushconstants.frag.glsl  vk_renderer_pushconstants.vert.glsl  vk_renderer_world2d.frag.glsl  vk_renderer_world2d.vert.glsl
src/: CMakeLists.txt  phoenix.cxx
src/consumer/: CMakeLists.txt  consumer.cxx
src/error/: CMakeLists.txt  init_error.cxx  sdl_init_error.cxx
src/graphics/: CMakeLists.txt  graphics.cxx
src/sdl/: CMakeLists.txt  sdl_util.cxx
src/sdl/display/: CMakeLists.txt  display.cxx
src/sdl/gl_renderer/: CMakeLists.txt  gl_renderer.cxx
src/sdl/helper/: CMakeLists.txt  helper.cxx
src/sdl/init_util/: CMakeLists.txt  init_util.cxx
src/sdl/init_video/: CMakeLists.txt  init_video.cxx
src/sdl/renderer/: CMakeLists.txt  renderer.cxx
src/sdl/scene/: CMakeLists.txt  scene.cxx
src/sdl/sdl_input/: CMakeLists.txt  sdl_input.cxx
src/sdl/sdl_renderer/: CMakeLists.txt  sdl_renderer.cxx
src/sdl/texture/: CMakeLists.txt  texture.cxx
src/sdl/vk_renderer/: CMakeLists.txt  vk_renderer.cxx
src/sdl/window/: CMakeLists.txt  window.cxx
xcode-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode-build/Phoenix.xcodeproj/: project.pbxproj
xcode-build/Phoenix.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme
xcode-ios-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcode-ios-build/Phoenix-iOS.xcodeproj/: project.pbxproj
xcode-ios-build/Phoenix-iOS.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD_iOS.xcscheme
xcode-ios-build/Phoenix.xcodeproj/: project.pbxproj
